--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <img src="assets/img/language/constellation_banner.png" id="constellation_banner">  
         
         <p>
-            Après avoir appris les bases de python en cours, je me suis investie en auto-didacte avec pygame, ou les animations css...
+            Après avoir appris les bases de python en cours, je me suis investie en auto-didacte avec pygame, ou les animations css. En ce moment, je m'initie à C++ et au base fondamentale du Machine Learning avec les cours proposés par Google Dev.
         </p>
 
         <div class="box">
@@ -103,7 +103,10 @@
         <div class="glass">
             <h2>Projets</h2>
             <div class="section">
-                <div class="blank"></div>
+                <div class="slider_text">
+                    <p><b>Hempburn</b><br>Branding d'une marque de skincare à base de plantes des régions de la mer Baltique.<br><br>
+                    Cette section peut paraître encore un peu vide, mais j'ai hâte de la remplir petit à petit !</p>
+                </div>
             </div>
             <div class="section">
                 <div class="slider_wrap">
