--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <header>
         <h2 class="logo">CV</h2>
+        <ul id="navbar">
+            <li><a href="#about">A propos</a></li>
+            <li><a href="#schools">Parcours</a></li>
+            <li><a href="#language">Language</a></li>
+            <li><a href="#project">Projets</a></li>
+            <li><a href="#contacts">Contact</a></li>
+        </ul>
+        <div class="space"></div>
     </header>
 
     <section id="name">
@@ -131,7 +139,7 @@
 
     <script src="assets/js/script.js"></script>
 </body>
-<footer>
+<footer id="contacts">
     <div class="contact">
         <a href="https://www.linkedin.com/in/lisa-rothlisberger/"><img src="assets/img/linkedin.png" id="linked_in"> </a>
         <p>
