--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             
         </div>
 
-        <div class="cloud_about" >
-            <p>
-                Etudiante en Sciences Cognitive en recherche d'un stage pour la dernière année de Licence. Mon but est d'approfondir mon début de connaissances en développement par la pratique. C'est pouquoi, même si ce stage est basé sur un nombre d'heures défini, je souhaiterai pouvoir en faire un maximum.<br><br>
-                Je me passione pour les domaines où je peux avoir une polyvalence dans mes compétences, comme : le dessin, la guitare, les jeux vidéos, les casses-têtes... <br><br>
-            </p>
+        <p>
+            Etudiante en Sciences Cognitive en recherche d'un stage pour la dernière année de Licence. Mon but est d'approfondir mon début de connaissances en développement par la pratique.<br><br>
+            Je me passione pour les domaines où je peux avoir une polyvalence dans mes compétences, comme : le dessin, la guitare, les jeux vidéos, les casses-têtes... <br><br>
+        </p>
 
+        <div class="cloud_about" >
             <img src="assets/img/about/nuage_1.png" id="nuage_1">
             <img src="assets/img/about/moon.png" id="moon">
             <img src="assets/img/about/nuage_2.png" id="nuage_2">
@@ -102,7 +102,6 @@
             <img src="assets/img/language/css.png" id="css_logo">
             <img src="assets/img/language/js.png" id="js_logo">
             <img src="assets/img/language/cplus.png" id="cplus">
-
         </div>
 
     </section>
