--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     Cette section peut paraître encore un peu vide, mais j'ai hâte de la remplir petit à petit !</p>
                 </div>
             </div>
-            <div class="section">
+            <div class="slider_section">
                 <div class="slider_wrap">
                     <div class="slider">
                         <img src="assets/img/project/packshot.png" id="packshot">
