--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <section id="name">
         <img src="assets/img/cover/mountain_1.png" id="mountain_1">
         <img src="assets/img/cover/mountain_2.png" id="mountain_2">
+        <img src="assets/img/cover/bghills.png" id="bghills">
         <img src="assets/img/cover/cloud_1.png" id="cloud_1">
         <img src="assets/img/cover/cloud_2.png" id="cloud_2">
-        <img src="assets/img/cover/bghills.png" id="bghills">
         <h2 id="text">Lisa Rothlisberger</h2>
         <img src="assets/img/cover/fghills.png" id="fghills">
     </section>
@@ -97,22 +97,67 @@
         </p>
 
         <div class="box">
-            <img src="assets/img/language/python.png" id="python_logo">
-            <img src="assets/img/language/html.png" id="html_logo">
-            <img src="assets/img/language/css.png" id="css_logo">
-            <img src="assets/img/language/js.png" id="js_logo">
-            <img src="assets/img/language/cplus.png" id="cplus">
+            <div class="pourcent" style="--clr:#ffffff;--num:85;">
+                <svg>
+                    <circle cx=50 cy=50 r=50></circle>
+                    <circle cx=50 cy=50 r=50></circle>
+                    <circle cx=50 cy=50 r=50></circle>
+                </svg>
+                <img src="assets/img/language/python.png" id="python_logo">
+            </div>
+
+            <div class="pourcent" style="--clr:#ffffff;--num:85;">
+                <svg>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                </svg>
+                <img src="assets/img/language/html.png" id="html_logo">                
+            </div>
+
+            <div class="pourcent" style="--clr:#ffffff;--num:90;">
+                <svg>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                </svg>
+                <img src="assets/img/language/css.png" id="css_logo">                
+            </div>
+
+            <div class="pourcent" style="--clr:#ffffff;--num:60;">
+                <svg>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                </svg>
+                <img src="assets/img/language/js.png" id="js_logo">                
+            </div>
+
+            <div class="pourcent" style="--clr:#ffffff;--num:15;">
+                <svg>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                </svg>
+                <img src="assets/img/language/cplus.png" id="cplus">            
+            </div>
+
         </div>
 
     </section>
 
     <section id="projet">
         <div class="glass">
+            <h2>Projets</h2>
             <div class="section">
                 <div class="slider_text">
-                    <h2>Projets</h2>
-                    <p><b>Hempburn</b><br>Branding d'une marque de skincare à base de plantes des régions de la mer Baltique.<br><br>
-                    Cette section peut paraître encore un peu vide, mais j'ai hâte de la remplir petit à petit !</p>
+                    <input type="radio" name="indicator" id="Hempburn">
+                    <input type="radio" name="indicator" id="Memorio">
+                    <nav>
+                        <label for="Hempburn" class="Hempburn">Hempburn</label>
+                        <label for="Memorio" class="Memorio">Memorio</label>
+                        <div class="select"></div>
+                    </nav>
                 </div>
             </div>
             <div class="slider_section">
