--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <img src="assets/img/school/art_ap.png" id="art_ap">
                 <p>
                     <b>Lycée Honorée d'Urfé (2014-2017)</b><br>
-                    <i>Baccalauréat de Sciences et Technologie du Design et des Arts Appliqués</i><br>
-                    Introduction complète aux métiers de conception, à l'histoire de l'art et aux aspects non seulement esthétiques mais techniques et fonctionnels du Design.<br><br>
+                    <i>Baccalauréat Sciences et Technologie du Design et Arts Appliqués</i><br>
+                    Introduction aux métiers de conception, à l'histoire de l'art et aux aspects esthétiques mais aussi techniques et fonctionnels du Design.<br>
                 </p>
             </div>
             <div class="space"></div>
@@ -79,8 +79,8 @@
             <div class="schoolbox">
                 <p align="right">
                     <b>Université Lumière Lyon II (2020-2023)</b><br>
-                    <i>Dernière année de Licence en Sciences Cognitive</i><br>
-                    Découverte des processus cognitifs, introduction à l'IA et à la programmation. Bases en érgonomie et neuromarketing avec le design d'interface.<br><br>
+                    <i>Licence de Sciences Cognitive</i><br>
+                    Découverte des processus cognitifs, de l'IA et la programmation. Bases en érgonomie et neuromarketing avec le design d'interface.<br>
                 </p>
                 <img src="assets/img/school/science_co.png" id="science_co">
             </div>
@@ -149,32 +149,40 @@
     <section id="projet">
         <div class="glass">
             <h2>Projets</h2>
-            <div class="section">
-                <div class="slider_text">
-                    <input type="radio" name="indicator" id="Hempburn">
-                    <input type="radio" name="indicator" id="Memorio">
-                    <nav>
-                        <label for="Hempburn" class="Hempburn">Hempburn</label>
-                        <label for="Memorio" class="Memorio">Memorio</label>
-                        <div class="select"></div>
-                    </nav>
-                </div>
-            </div>
-            <div class="slider_section">
-                <div class="slider_wrap">
-                    <div class="slider">
-                        <img src="assets/img/project/packshot.png" id="packshot">
-                        <img src="assets/img/project/packshot_1.png" id="packshot_1">
-                        <img src="assets/img/project/packshot_2.png" id="packshot_2">
-                        <img src="assets/img/project/packshot_3.png" id="packshot_3">
-                        <img src="assets/img/project/packshot_4.png" id="packshot_4">
+            <div class="slider_text">
+                <input type="radio" name="indicator" checked id="Hempburn">
+                <input type="radio" name="indicator" id="Memorio">
+                <nav>
+                    <label for="Hempburn" class="Hempburn">Hempburn</label>
+                    <label for="Memorio" class="Memorio">Memor.io</label>
+                    <div class="select"></div>
+                </nav>
+                <div class="slider_section">
+                    <div class="slider_Hempburn">
+                        <div class="slider">
+                            <img src="assets/img/project/packshot.png" id="packshot">
+                            <img src="assets/img/project/packshot_1.png" id="packshot_1">
+                            <img src="assets/img/project/packshot_2.png" id="packshot_2">
+                            <img src="assets/img/project/packshot_3.png" id="packshot_3">
+                            <img src="assets/img/project/packshot_4.png" id="packshot_4">
+                        </div>
+                        <div class="slider-nav">
+                            <a href="#packshot"></a>
+                            <a href="#packshot_1"></a>
+                            <a href="#packshot_2"></a>
+                            <a href="#packshot_3"></a>
+                            <a href="#packshot_4"></a>
+                        </div>
                     </div>
-                    <div class="slider-nav">
-                        <a href="#packshot"></a>
-                        <a href="#packshot_1"></a>
-                        <a href="#packshot_2"></a>
-                        <a href="#packshot_3"></a>
-                        <a href="#packshot_4"></a>
+                    <div class="slider_Memorio">
+                        <div class="slider">
+                            <img src="assets/img/project/screenshot.png" id="screenshot">
+                            <img src="assets/img/project/screenshot_2.png" id="screenshot_2">
+                        </div>
+                        <div class="slider-nav">
+                            <a href="#screenshot"></a>
+                            <a href="#screenshot_2"></a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -196,3 +204,4 @@
 
 </footer>
 </html>
+
