--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </header>
 
     <section id="name">
+        <img src="assets/img/cover/bgstars.png" id="bgstars">
         <img src="assets/img/cover/mountain_1.png" id="mountain_1">
         <img src="assets/img/cover/mountain_2.png" id="mountain_2">
         <img src="assets/img/cover/bghills.png" id="bghills">
