--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <img src="assets/img/language/constellation_banner.png" id="constellation_banner">  
         
         <p>
-            Après avoir appris les bases de python en cours, je me suis investie en auto-didacte avec pygame, ou les animations css. En ce moment, je m'initie à C++ et au base fondamentale du Machine Learning avec les cours proposés par Google Dev.
+            Après avoir appris les bases de python en cours, je me suis investie en auto-didacte avec pygame, ou les animations css. En ce moment, je m'initie à C++ et aux bases fondamentales du Machine Learning avec les cours proposés par Google Dev.
         </p>
 
         <div class="box">
