--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
 
     <section id="language">
         <h2>Langage de programmation</h2>
-        <img src="assets/img/language/wave.svg" id="wave_svg">
+        <img src="assets/img/language/wave.png" id="wave">
         <img src="assets/img/language/constellation_banner.png" id="constellation_banner">  
         
         <p>
-            Après avoir appris les bases de python en cours, je me suis investie en auto-didacte avec pygame, ou les animations css. En ce moment, je m'initie à C++ et aux bases fondamentales du Machine Learning avec les cours proposés par Google Dev.
+            Après avoir appris les bases de python lors de ma licence, je me suis investie en auto-didacte avec pygame, ou les animations css. En ce moment, je m'initie à C++ et aux bases fondamentales du Machine Learning.
         </p>
 
         <div class="box">
             <div class="pourcent" style="--clr:#ffffff;--num:85;">
                 <svg>
-                    <circle cx=50 cy=50 r=50></circle>
-                    <circle cx=50 cy=50 r=50></circle>
-                    <circle cx=50 cy=50 r=50></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20% class="progress"></circle>
                 </svg>
                 <img src="assets/img/language/python.png" id="python_logo">
             </div>
@@ -111,7 +111,7 @@
                 <svg>
                     <circle cx=50 cy=50 r=20%></circle>
                     <circle cx=50 cy=50 r=20%></circle>
-                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20% class="progress"></circle>
                 </svg>
                 <img src="assets/img/language/html.png" id="html_logo">                
             </div>
@@ -120,16 +120,16 @@
                 <svg>
                     <circle cx=50 cy=50 r=20%></circle>
                     <circle cx=50 cy=50 r=20%></circle>
-                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20% class="progress"></circle>
                 </svg>
-                <img src="assets/img/language/css.png" id="css_logo">                
+                <img src="assets/img/language/css.png" id="css_logo" alignement-baseline>                
             </div>
 
             <div class="pourcent" style="--clr:#ffffff;--num:60;">
                 <svg>
                     <circle cx=50 cy=50 r=20%></circle>
                     <circle cx=50 cy=50 r=20%></circle>
-                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20% class="progress"></circle>
                 </svg>
                 <img src="assets/img/language/js.png" id="js_logo">                
             </div>
@@ -138,7 +138,7 @@
                 <svg>
                     <circle cx=50 cy=50 r=20%></circle>
                     <circle cx=50 cy=50 r=20%></circle>
-                    <circle cx=50 cy=50 r=20%></circle>
+                    <circle cx=50 cy=50 r=20% class="progress"></circle>
                 </svg>
                 <img src="assets/img/language/cplus.png" id="cplus">            
             </div>
