--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <img src="assets/img/about/star_1.png" id="star_1">
             <img src="assets/img/about/star_2.png" id="star_2">
             <img src="assets/img/about/star_3.png" id="star_3">
+            <img src="assets/img/about/star_4.png" id="star_4">
         </div>
 
     </section>
