--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
         <div class="glass">
             <h2>Projets</h2>
             <div class="slider_text">
+                
                 <input type="radio" name="indicator" checked id="Hempburn">
                 <input type="radio" name="indicator" id="Memorio">
                 <nav>
@@ -211,6 +212,7 @@
                 </nav>
                 <div class="slider_section">
                     <div class="slider_Hempburn">
+                        
                         <div class="slider">
                             <img src="assets/img/project/packshot.png" id="packshot">
                             <img src="assets/img/project/packshot_1.png" id="packshot_1">
@@ -225,16 +227,27 @@
                             <a href="#packshot_3"></a>
                             <a href="#packshot_4"></a>
                         </div>
+                        <p>
+                            Création d'une image de marque pour des produits de soin.
+                        </p>
                     </div>
                     <div class="slider_Memorio">
                         <div class="slider">
                             <img src="assets/img/project/screenshot.png" id="screenshot">
+                            <img src="assets/img/project/screenshot_1.png" id="screenshot_1">
                             <img src="assets/img/project/screenshot_2.png" id="screenshot_2">
+                            <img src="assets/img/project/screenshot_3.png" id="screenshot_3">
                         </div>
                         <div class="slider-nav">
                             <a href="#screenshot"></a>
+                            <a href="#screenshot_1"></a>
                             <a href="#screenshot_2"></a>
+                            <a href="#screenshot_3"></a>
+
                         </div>
+                        <p>
+                            Idée d'une application de jeux de mémoire personnalisables, à développer.
+                        </p>
                     </div>
                 </div>
             </div>
