--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#about">A propos</a></li>
             <li><a href="#schools">Parcours</a></li>
             <li><a href="#language">Compétences</a></li>
-            <li><a href="#project">Projets</a></li>
+            <li><a href="#projet">Projets</a></li>
             <li><a href="#contacts">Contact</a></li>
         </ul>
         <div class="space"></div>
@@ -64,27 +64,29 @@
         <img src="assets/img/school/constellation.png" id="constellation">
         <img src="assets/img/school/constellation_top.png" id="constellation_top">
 
-        <div class="container">
-            <div class="schoolbox">
-                    <img src="assets/img/school/art_ap.png" id="art_ap">
-                <p>
-                    <b>Lycée Honorée d'Urfé (2014-2017)</b><br>
-                    <i>Baccalauréat Sciences et Technologie du Design et Arts Appliqués</i><br>
-                    Introduction aux métiers de conception, à l'histoire de l'art et aux aspects esthétiques mais aussi techniques et fonctionnels du Design.<br>
-                </p>
+        <div class="cont">
+            <div class="container">
+                <div class="schoolbox">
+                        <img src="assets/img/school/art_ap.png" id="art_ap">
+                    <p>
+                        <b>Lycée Honorée d'Urfé (2014-2017)</b><br>
+                        <i>Baccalauréat Sciences et Technologie du Design et Arts Appliqués</i><br>
+                        Introduction aux métiers de conception, à l'histoire de l'art et aux aspects esthétiques mais aussi techniques et fonctionnels du Design.<br>
+                    </p>
+                </div>
+                <div class="space"></div>
             </div>
-            <div class="space"></div>
-        </div>
 
-        <div class="container">
-            <div class="space"></div>
-            <div class="schoolbox">
-                <p align="right">
-                    <b>Université Lumière Lyon II (2020-2023)</b><br>
-                    <i>Licence de Sciences Cognitive</i><br>
-                    Découverte des processus cognitifs, de l'IA et la programmation. Bases en érgonomie et neuromarketing avec le design d'interface.<br>
-                </p>
-                <img src="assets/img/school/science_co.png" id="science_co">
+            <div class="container">
+                <div class="space"></div>
+                <div class="schoolbox">
+                    <p align="right">
+                        <b>Université Lumière Lyon II (2020-2023)</b><br>
+                        <i>Licence de Sciences Cognitive</i><br>
+                        Découverte des processus cognitifs, de l'IA et la programmation. Bases en érgonomie et neuromarketing avec le design d'interface.<br>
+                    </p>
+                    <img src="assets/img/school/science_co.png" id="science_co">
+                </div>
             </div>
         </div>
     </section>
@@ -96,10 +98,10 @@
         
         <div class="box">
 
-            <input type="radio" name="indicator" checked id="Dev">
+            <input type="radio" name="indicator"  id="Dev">
             <input type="radio" name="indicator" id="Design">
             <nav>
-                <label for="Dev" class="Dev checked">Programmation</label>
+                <label for="Dev" class="Dev ">Programmation</label>
                 <label for="Design" class="Design">Design</label>
             </nav>
 
@@ -246,7 +248,7 @@
 
                         </div>
                         <p>
-                            Idée d'une application de jeux de mémoire personnalisables, à développer.
+                            Application de jeux de mémoire personnalisables (Figma).
                         </p>
                     </div>
                 </div>
