--- a/index.html
+++ b/index.html
@@ -207,9 +207,11 @@
                 
                 <input type="radio" name="indicator" checked id="Hempburn">
                 <input type="radio" name="indicator" id="Memorio">
+                <input type="radio" name="indicator" id="draw">
                 <nav>
                     <label for="Hempburn" class="Hempburn checked">Hempburn</label>
                     <label for="Memorio" class="Memorio">Memor.io</label>
+                    <label for="draw" class="draw">Dessin</label>
                     <div class="select"></div>
                 </nav>
                 <div class="slider_section">
@@ -250,6 +252,26 @@
                         <p>
                             Application de jeux de mémoire personnalisables (Figma).
                         </p>
+                    </div>
+                    <div class="slider_draw">
+                        <div class="slider">
+                            <img src="assets/img/project/draw.png" id="draw">
+                            <img src="assets/img/project/draw_1.png" id="draw_1">
+                            <img src="assets/img/project/draw_2.png" id="draw_2">
+                            <img src="assets/img/project/draw_3.png" id="draw_3">
+                            <img src="assets/img/project/draw_4.png" id="draw_4">
+                            <img src="assets/img/project/draw_5.png" id="draw_5">
+
+                        </div>
+                        <div class="slider-nav">
+                            <a href="#draw"></a>
+                            <a href="#draw_1"></a>
+                            <a href="#draw_2"></a>
+                            <a href="#draw_3"></a>
+                            <a href="#draw_4"></a>
+                            <a href="#draw_5"></a>
+
+                        </div>
                     </div>
                 </div>
             </div>
