--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#about">A propos</a></li>
             <li><a href="#schools">Parcours</a></li>
             <li><a href="#language">Compétences</a></li>
-            <li><a href="#projet">Projets</a></li>
+            <li><a href="#projet">Galerie</a></li>
             <li><a href="#contacts">Contact</a></li>
         </ul>
         <div class="space"></div>
@@ -41,8 +41,8 @@
         </div>
 
         <p>
-            Etudiante en Sciences Cognitive en recherche d'un stage pour la dernière année de Licence. Mon but est d'approfondir mon début de connaissances en développement par la pratique.<br><br>
-            Je me passione pour les domaines où je peux avoir une polyvalence dans mes compétences, comme : le dessin, la guitare, les jeux vidéos, les casses-têtes... <br><br>
+            Etudiante en licence de Sciences Cognitive en recherche d'un stage. Mon but est de me diriger vers la remédiation des troubles par la gamification.<br><br>
+            Je me passione pour les domaines où je peux avoir une polyvalence dans mes compétences, comme le dessin, la guitare, les jeux vidéos, les casses-têtes... <br><br>
         </p>
 
         <div class="cloud_about" >
@@ -72,7 +72,7 @@
                         <img src="assets/img/school/art_ap.png" id="art_ap">
                     <p>
                         <b>Lycée Honorée d'Urfé (2014-2017)</b><br>
-                        <i>Baccalauréat Sciences et Technologie du Design et Arts Appliqués</i><br>
+                        <i>Sciences et Technologie du Design et Arts Appliqués</i><br>
                         Introduction aux métiers de conception, à l'histoire de l'art et aux aspects esthétiques mais aussi techniques et fonctionnels du Design.<br>
                     </p>
                 </div>
@@ -84,7 +84,7 @@
                 <div class="schoolbox">
                     <p align="right">
                         <b>Université Lumière Lyon II (2020-2023)</b><br>
-                        <i>Licence de Sciences Cognitive</i><br>
+                        <i>Sciences Cognitives</i><br>
                         Découverte des processus cognitifs, de l'IA et la programmation. Bases en érgonomie et neuromarketing avec le design d'interface.<br>
                     </p>
                     <img src="assets/img/school/science_co.png" id="science_co">
@@ -109,7 +109,7 @@
 
             <div class="dev">
                 <p>
-                    Après avoir appris les bases de python lors de ma licence, je me suis investie en auto-didacte avec pygame, ou les animations css. En ce moment, je m'initie à C++ et aux bases fondamentales du Machine Learning.
+                    Après une initiation à python dans le cadre de mon cursus, je me suis investie en auto-didacte avec pygame, ou les animations css. En ce moment, je découvres C++ et les bases du Machine Learning.
                 </p>
         
                 <div class="pourcent" style="--clr:#ffffff;--num:85;">
@@ -204,7 +204,7 @@
 
     <section id="projet">
         <div class="glass">
-            <h2>Projets</h2>
+            <h2>Galerie</h2>
             <div class="slider_text">
                 
                 <input type="radio" name="indicator" checked id="Hempburn">
@@ -234,7 +234,7 @@
                             <a href="#packshot_4"></a>
                         </div>
                         <p>
-                            Création d'une image de marque pour des produits de soin.
+                            Image de marque pour des produits de soin.
                         </p>
                     </div>
                     <div class="slider_Memorio">
