--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#projet">Galerie</a></li>
             <li><a href="#contacts">Contact</a></li>
         </ul>
-        <div class="space"></div>
+        <div id="centering"></div>
     </header>
   
 
