--- a/index.html
+++ b/index.html
@@ -165,10 +165,9 @@
         
                 <div class="pourcent" style="--clr:#ffffff;--num:80;">
                     <svg>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
+                        <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
-
-                        <circle cx=50 cy=50 r=20%></circle>
-                        <circle cx=50 cy=50 r=20%></circle>
                     </svg>
                     <img src="assets/img/language/ps.png" id="ps_logo">
                 </div>
