--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
                 <div class="pourcent" style="--clr:#ffffff;--num:85;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
@@ -123,7 +123,7 @@
 
                 <div class="pourcent" style="--clr:#ffffff;--num:85;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
@@ -132,7 +132,7 @@
 
                 <div class="pourcent" style="--clr:#ffffff;--num:90;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
@@ -141,7 +141,7 @@
 
                 <div class="pourcent" style="--clr:#ffffff;--num:60;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
@@ -150,7 +150,7 @@
 
                 <div class="pourcent" style="--clr:#ffffff;--num:15;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
@@ -174,7 +174,7 @@
 
                 <div class="pourcent" style="--clr:#ffffff;--num:60;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
@@ -183,7 +183,7 @@
 
                 <div class="pourcent" style="--clr:#ffffff;--num:75;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
@@ -192,7 +192,7 @@
 
                 <div class="pourcent" style="--clr:#ffffff;--num:15;">
                     <svg>
-                        <circle cx=50 cy=50 r=20%></circle>
+                        <circle cx=50 cy=50 r=20% class="base"></circle>
                         <circle cx=50 cy=50 r=20%></circle>
                         <circle cx=50 cy=50 r=20% class="progress"></circle>
                     </svg>
